Add red markup for row wrappers
Set of CSS styles applied in order to see each row
in the container.

--- a/styles.css
+++ b/styles.css
@@ -3,4 +3,10 @@
   width: 500px;
   border: solid 2px;
   display: flex;
+  flex-direction: column;
+}
+
+.row-wrapper {
+  border: solid red 1px;
+  flex: 1;
 }
