--- a/styles.css
+++ b/styles.css
@@ -7,12 +7,11 @@
 }
 
 .row-wrapper {
-  border: solid green 1px;
   flex: 1;
   display: flex;
 }
 
 .square {
-  border: solid blue 1px;
+  border: solid lightgray 1px;
   flex: 1;
 }
