--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,14 @@
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+button {
+  width: 120px;
+  margin-bottom: 50px;
+}
+
 .container {
   height: 500px;
   width: 500px;
